force-app/main/default/objects/ucinn_ascendv2__Spreedly_Gateways_Available__c/ucinn_ascendv2__Spreedly_Gateways_Available__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Spreedly Gateways Available</label>
</CustomObject>