force-app/main/default/objects/ucinn_ascendv2__Spreedly_Gateways_Available__c/fields/ucinn_ascendv2__Last_Used_Settings__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Last_Used_Settings__c</fullName>
    <label>Last Used Settings</label>
    <type>TextArea</type>
</CustomField>