force-app/main/default/objects/ucinn_ascendv2__Spreedly_Gateways_Available__c/fields/ucinn_ascendv2__Pledge_Gateway_IDs__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Gateway_IDs__c</fullName>
    <label>Pledge Gateway IDs</label>
    <type>TextArea</type>
</CustomField>